# fancy_ray_tracer

./: .gitignore  README.md  build.py  clock.py  hexagon.py  main.py  makefile  materials.py  obj.py  pyproject.toml  ttt.py
fancy_ray_tracer/: __init__.py  bridson_sampling.py  camera.py  canvas.py  constants.py  illumination.py  ilumination.py  materials.py  matrices.py  parsers.py  primitives.py  protocols.py  ray.py  tuples.py  utils.py  world.py
fancy_ray_tracer/compiled/: _intersection.pyx  _schlick.pyx
tests/: test_bounding_box.py  test_camera.py  test_cones.py  test_csg.py  test_cubes.py  test_cylinders.py  test_group.py  test_hit.py  test_intersections.py  test_material.py  test_matrices.py  test_patterns.py  test_ray.py  test_transformation.py  test_triangle.py  test_tuples.py  test_version.py  test_wrold.py
