[tool.poetry]
name = "fancy-ray-tracer-v2"
version = "0.1.0"
description = ""
authors = ["Frank S. <fsadannn@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "nexus"
url = "http://nexus.prod.uci.cu/repository/pypi-all/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
